--- a/MauiProject/MainPage.xaml
+++ b/MauiProject/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sf="clr-namespace:Syncfusion.Maui.DataForm;assembly=Syncfusion.Maui.DataForm"
              xmlns:local="clr-namespace:MauiProject"
+             x:DataType="local:ViewModel"
              x:Class="MauiProject.MainPage">
 
     <ContentPage.BindingContext>
